# cmake-windows-clang-issues

./: CMakeLists.txt  README.md  lib.cpp  lib.cu  lib.h  main.cpp
